fix alert thresholds and text

--- a/riemann.config
+++ b/riemann.config
@@ -54,23 +54,25 @@
 		(match :service "cpu"
 			(with {:event "CpuUtil" :group "OS"}
 				(splitp < (* metric 100)
-					70 (major "15-min load average is very high" dedup-alert)
-					40 (warning "15-min load average is high" dedup-alert)
-					(normal "15-min load average is OK" dedup-alert))))
+					99 (critical "CPU utilisation >99%" dedup-alert)
+					95 (major "CPU utilisation >95%" dedup-alert)
+					90 (minor "CPU utilisation >90%" dedup-alert)
+					80 (warning "CPU utilisation >80%" dedup-alert)
+					(normal "CPU utilisation is OK" dedup-alert))))
 
 		(match :service "memory"
 			(with {:event "MemUtil" :group "OS"}
 				(splitp < (* metric 100)
-					70 (major "15-min load average is very high" dedup-alert)
-					40 (warning "15-min load average is high" dedup-alert)
-					(normal "15-min load average is OK" dedup-alert))))
+					90 (major "Memory utilisation >90%" dedup-alert)
+					75 (warning "Memory utilisation >75%" dedup-alert)
+					(normal "Memory utilisation is OK" dedup-alert))))
 
 		(match :service #"disk"
 			(with {:event "FsUtil" :group "OS"}
 				(splitp < (* metric 100)
-					95 (critical "15-min load average is very high" dedup-alert)
-					90 (major "15-min load average is very high" dedup-alert)
-					80 (warning "15-min load average is high" dedup-alert)
-					(normal "15-min load average is OK" dedup-alert))))))
+					95 (critical "Filesystem utilisation >95% " dedup-alert)
+					90 (major "Filesystem utilisation >90%" dedup-alert)
+					80 (warning "Filesystem utilisation >80%" dedup-alert)
+					(normal "Filesystem utilisation is OK" dedup-alert))))))
 
 
