add heartbeat alert

--- a/riemann.config
+++ b/riemann.config
@@ -5,7 +5,7 @@
 		 '[cheshire.core :as json]
 		 '[riemann.query :as query])
 
-(logging/init :file "/var/log/riemann/riemann.log")
+(logging/init :file "./riemann.log")
 
 (def hostname (.getHostName (java.net.InetAddress/getLocalHost)))
 
@@ -20,7 +20,11 @@
 (instrumentation {:enabled? false})
 
 ; reap expired events every 10 seconds
-(periodically-expire 10)
+(periodically-expire 10 {:keep-keys [:host :service :tags :metric :ttl :index-time]})
+
+; some helpful functions
+(defn now []
+	(Math/floor (unix-time)))
 
 ; set of severity functions
 (defn severity
@@ -39,8 +43,20 @@
 		dedup-alert (changed-state alerta)]
 
 	(streams
+		index)
+
+	(streams
 		(throttle 1 30
 			heartbeat))
+
+	(streams
+		(expired
+			(match :service "heartbeat"
+				(fn [event]
+					(let [elapsed (- (now) (:metric event))
+						ttl (:ttl event)]
+						((with {:event "Heartbeat" :group "Riemann" :metric elapsed}
+								(major  (str "No heartbeat from host in last " ttl " seconds") dedup-alert)) event))))))
 
 	(streams
 		;prn
