update for riemann 2.6 and alerta 3.x

--- a/riemann.config
+++ b/riemann.config
@@ -1,7 +1,7 @@
 ; -*- mode: clojure; -*-
 ; vim: filetype=clojure
 
-(require '[clj-http.client :as client] 
+(require '[clj-http.client :as client]
 		 '[cheshire.core :as json]
 		 '[riemann.query :as query])
 
@@ -39,7 +39,7 @@
 (def critical (partial severity "critical"))
 
 ; thresholding
-(let [index (default :ttl 900 (update-index (index)))
+(let [index (default :ttl 900 (index))
 		dedup-alert (changed-state alerta)]
 
 	(streams
