Update alerta plugin to work with Riemann v3

--- a/riemann.config
+++ b/riemann.config
@@ -1,21 +1,17 @@
 ; -*- mode: clojure; -*-
 ; vim: filetype=clojure
 
-(require '[clj-http.client :as client]
-		 '[cheshire.core :as json]
-		 '[riemann.query :as query])
-
-(logging/init :file "./riemann.log")
-
-(def hostname (.getHostName (java.net.InetAddress/getLocalHost)))
+(logging/init {:file "/var/log/riemann/riemann.log"})
 
 (include "alerta.clj")
+(:require '[alerta :refer [alert heartbeat]])
 
-(tcp-server :host "0.0.0.0")
-(udp-server :host "0.0.0.0")
-(ws-server :host "0.0.0.0")
-(repl-server)
-(graphite-server :host "0.0.0.0")
+; Listen on the local interface over TCP (5555), UDP (5555), and websockets
+; (5556)
+(let [host "127.0.0.1"]
+  (tcp-server {:host host})
+  (udp-server {:host host})
+  (ws-server  {:host host}))
 
 (instrumentation {:enabled? false})
 
@@ -24,12 +20,16 @@
 
 ; some helpful functions
 (defn now []
-	(Math/floor (unix-time)))
+  (Math/floor (unix-time)))
+
+; Alerta configuration
+(def alert (alerta/alert {:endpoint "https://alerta-api.herokuapp.com" :key "demo-key" :debug true}))
+(def heartbeat (alerta/heartbeat {:endpoint "https://alerta-api.herokuapp.com" :key "demo-key"}))
 
 ; set of severity functions
 (defn severity
-	[severity message & children]
-	(fn [e] ((apply with {:state severity :description message} children) e)))
+  [severity message & children]
+  (fn [e] ((apply with {:state severity :description message} children) e)))
 
 (def informational (partial severity "informational"))
 (def normal (partial severity "normal"))
@@ -40,7 +40,7 @@
 
 ; thresholding
 (let [index (default :ttl 900 (index))
-		dedup-alert (changed-state alerta)]
+		dedup-alert (changed-state alert)]
 
 	(streams
 		index)
