Fix API key reference in config file

--- a/riemann.config
+++ b/riemann.config
@@ -23,8 +23,8 @@
   (Math/floor (unix-time)))
 
 ; Alerta configuration
-(def alert (alerta/alert {:endpoint "https://alerta-api.herokuapp.com" :key "demo-key" :debug true}))
-(def heartbeat (alerta/heartbeat {:endpoint "https://alerta-api.herokuapp.com" :key "demo-key"}))
+(def alert (alerta/alert {:endpoint "https://alerta-api.herokuapp.com" :api-key "demo-key" :debug true}))
+(def heartbeat (alerta/heartbeat {:endpoint "https://alerta-api.herokuapp.com" :api-key "demo-key"}))
 
 ; set of severity functions
 (defn severity
